@@ -58,6 +58,7 @@ following names for their contribution to the product.
 * Agbad
 * Brad Jorsch
 * Brent G
+* Brianna Laugher
 * Daniel Arnold
 * Danny B.
 * FunPika
